# production-inference-stack-evaluator

./: .env.example  .gitignore  ARTICLE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EDITORIAL_BRIEF.md  HUMANIZATION_NOTES.md  Makefile  QUALITY_CHECKLIST.md  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  manifest.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  quality-check.yml  security.yml
assets/diagrams/: diagram_briefs.md
docs/: architecture.md  assumptions.md  configuration.md  quickstart.md  research_notes.md  structure.md
docs/decisions/: ADR-0001-context-and-scope.md  ADR-0002-core-design-tradeoffs.md
docs/operations/: deployment.md  observability.md  troubleshooting.md
docs/security/: data-handling.md  threat-model.md
docs/tutorials/: run_manual_evaluation.md
examples/minimal/: metrics.csv  weights.json
examples/production_like/: README.md
examples/realistic/: README.md
scripts/: basic_secret_scan.sh  public_release_gate.sh  validate_repo.py
src/inference_stack_eval/: __init__.py  cli.py  errors.py
src/inference_stack_eval/adapters/: base.py  manual_csv.py
src/inference_stack_eval/core/: benchmark_matrix.py  models.py  report.py  scoring.py
src/inference_stack_eval/observability/: logging.py
tests/unit/: test_models.py  test_report.py  test_scoring.py
